--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   dio: ^3.0.10
   #para manejo de animaciones: hecho por Fernando Herrera
   animate_do: ^1.7.3
+  #para desencriptar los polylines que llegan en un response
+  polyline: ^1.0.2
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
